css/upcoming.css
/* ... */
@media (max-width: 480px) {

    nav h2 #movieZine {
        font-size: .9rem;
    }

    #theM {
        font-size: 1.4rem;
    }

    #theme {
        width: 25px;
        height: 25px;
    }

    #themeColor {
        width: 12px;
        height: 12px;
    }

    #search {
        width: 25px;
        height: 25px;
    }

    #searchIcon {
        padding-left: 5px;
        scale: 1;
    }

    #searchInputDiv {
        height: 40px;
        margin-left: 5px;
    }

    #searchInputDiv input {
        font-size: small;
    }

    h1 {
        font-size: 1.2rem;
        line-height: 35px;
        letter-spacing: 3px;
    }

    .card {
        width: 100%;
        height: 200px;
        margin-top: 10px;
        margin-left: 20px;
        margin-right: 20px;
        flex-direction: row;
    }

    .intro div {
        height: 250px;
        margin-bottom: 10px;
        font-size: 2em;
        transition: 0.5s;
    }

    .cardImg {
        width: 150px;
        height: 200px;
        transition: 0.5s;
    }

    .cardInfo {
        flex-direction: column;
        align-self: flex-start;
    }

    .cardGenres {
        width: 100%;
        max-height: 82px;
        list-style: none;
        display: flex;
        justify-content: flex-start;
        align-items: center;
        align-content: flex-start;
        flex-wrap: wrap;
        margin-top: 1.2rem;
        overflow: auto;
    }

    .cardGenres li {
        font-size: 10px;
        border: 1px solid rgb(214, 214, 214);
        border-radius: 10px;
        padding: 7px;
        margin: 0 5px 10px;
        z-index: 4;
    }

    /* .cardGenres li:hover {
        border: 1px solid rgb(104, 104, 104);
        cursor: pointer;
        color: rgb(214, 214, 214);
    } */

    .cardTitle {
        font-size: 15px;
        align-self: flex-start;
        width: 100%;
        max-height: 82px;
        overflow: auto;
        z-index: 3;
    }

    .cardRating {
        align-self: flex-start;
        margin-bottom: 10px;
        margin-right: -10px;
    }

    .cardOverview div:first-child {
        font-size: 20px;
        margin-bottom: 20px;
    }

    .cardOverview div:last-child {
        font-size: 15px;
        margin: 0 20px;
        overflow: hidden;
        text-overflow: ellipsis;
        display: -webkit-box;
        -webkit-line-clamp: 4;
        /* number of lines to show */
        line-clamp: 4;
        -webkit-box-orient: vertical;
    }













    .expandedCard {
        width: 100%;
        margin: 0 20px;
        background-image: linear-gradient(to bottom, rgba(0, 0, 0, 0.8), rgba(4, 8, 22, 0.8)), url("https://m.media-amazon.com/images/M/MV5BNWM0ZGJlMzMtZmYwMi00NzI3LTgzMzMtNjMzNjliNDRmZmFlXkEyXkFqcGdeQXVyMTM1MTE1NDMx._V1_.jpg");
        background-size: cover;
    }

    #ecard {
        align-items: center;
    }

    #ecardTagline {
        font-size: 15px;
        margin: 0 20px 20px;
    }

    #ecardTitle {
        font-size: 20px;
        margin: 0 20px 20px;
        margin-top: -40px;
        margin-right: 60px;
    }

    #ecardClose {
        width: 15px;
        height: 15px;
        margin: 20px;
    }

    #ecardImg {
        display: none;
    }

    #ecardRatingNTime {
        width: 170px;
        font-size: 14px;
    }

    #ecardGenres li {
        font-size: 12px;
        border-radius: 20px;
        padding: 10px;
        margin: 0 5px 10px;
    }

    #ecardOverview {
        font-size: 14px;
        margin: 0 20px 20px;
        overflow: hidden;
        display: -webkit-box;
        -webkit-line-clamp: 4;
        -webkit-box-orient: vertical;
    }

    #ecardWatch {
        font-size: 18px;
        margin: 20px 20px 20px;
    }

    .ecardVideo {
        width: 280px;
        height: 157.5px;
    }

    .ecardVideosOuter {
        margin-bottom: -157.5px;
    }

    #videoPre {
        width: 40px;
        height: 157.5px;
        box-shadow: 10px 0px 10px;
    }

    #videoPre img {
        width: 20px;
        height: 20px;
    }

    #videoNxt {
        width: 40px;
        height: 157.5px;
        box-shadow: -10px 0px 10px;
    }

    #videoNxt img {
        width: 20px;
        height: 20px;
    }

}

